deploy: azurey0/gitpage_source@63d50dbaa0ef37a4e04e6022aae4a257d2971c6e

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -291,7 +291,7 @@
 
                 "
               >
-                <a href="https://github.com/chungdz/ebay2022" target="_blank" rel="noopener">
+                <a href="https://github.com/azurey0/ebay2022" target="_blank" rel="noopener">
                   <img src="/images/portfolio/ebay.png" alt="eBay Machine Learning Challenge" />
                 </a>
               </div>
@@ -326,7 +326,7 @@
               <p>Ranked 11th in eBay 3rd Annual University Challenge of Machine Learning on an e-commerce dataset. The problem is to build a model that can accurately predict delivery dates for items sold on eBay.</p>
               
                 <div class="cta">
-                  <a class="btn" href="https://github.com/chungdz/ebay2022" target="_blank" rel="noopener">Visit Site</a>
+                  <a class="btn" href="https://github.com/azurey0/ebay2022" target="_blank" rel="noopener">Visit Site</a>
                 </div>
 
               
