deploy: azurey0/gitpage_source@4e76fdeaf162c9b97b2687733de9b1966fa22cc8

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -494,7 +494,7 @@
                 "
               >
                 <a href="https://github.com/azurey0/MSBA-hackthon" target="_blank" rel="noopener">
-                  <img src="/images/portfolio/msba.jpg" alt="Hackathon with Google Cloud" />
+                  <img src="/images/portfolio/msba.png" alt="Hackathon with Google Cloud" />
                 </a>
               </div>
 
